--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eshrahly | منصة اشرحلي</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/tesseract.js@v4.0.0/dist/tesseract.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4/dist/tesseract.min.js"></script>
+
+<script>
+async function recognizeImage(imageFile) {
+    try {
+        // نحدد هنا مسار اللغات يدوياً لضمان عدم حدوث 404
+        const worker = await Tesseract.createWorker({
+            langPath: 'https://tessdata.projectnaptha.com/4.0.0_best/', 
+            logger: m => console.log(m) // سيظهر لك نسبة التحميل في الكونسول
+        });
+
+        await worker.loadLanguage('ara+eng');
+        await worker.initialize('ara+eng');
+        const { data: { text } } = await worker.recognize(imageFile);
+        await worker.terminate();
+        return text;
+    } catch (error) {
+        console.error("حدث خطأ في التحليل:", error);
+        return ""; // نرجع نص فارغ لكي لا يعلق الموقع
+    }
+}
+</script>
     <style>
         /* الإعدادات العامة والألوان */
         :root { --primary-bg: linear-gradient(135deg, #667eea 0%, #764ba2 100%); --glass-bg: rgba(255, 255, 255, 0.1); --glass-border: rgba(255, 255, 255, 0.2); --accent-color: #764ba2; }
@@ -384,4 +405,5 @@
 </script>
 
 </body>
+
 </html>
